# netifaces-2

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  noxfile.py  pyproject.toml  test.py
.github/workflows/: CI.yml
examples/: netifaces2_ip_addr.py
hooks/: pre-commit
netifaces/: __init__.py  __main__.py  defs.py  routes.py
python/netifaces/: __init__.py  defs.py  routes.py
src/: common.rs  lib.rs  linux.rs  types.rs  win.rs
tests/: basic_functionality_test.py
win_ip_helper/: Cargo.toml
win_ip_helper/src/: main.rs
