[package]
name = "netifaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "netifaces"
crate-type = ["cdylib"]

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
log = "0.4.20"
thiserror = "1.0.51"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.42.0", features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking"] }
get_adapters_addresses = "0.1.1"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module", "abi3-py37"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["net"] }
libc = "0.2"
