[project]
name = "netifaces2"
version = "0.0.12"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
homepage = "https://github.com/SamuelYvon/netifaces-2"
repository = "https://github.com/SamuelYvon/netifaces-2"
authors = [
    {email = "samuelyvon9@gmail.com"},
    {name = "Samuel Yvon"}
]
maintainers = [{name = "Samuel Yvon", email = "samuelyvon9@gmail.com" }]
license = "MIT"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.isort]
profile = "black"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"

[[tool.mypy.overrides]]
module="rs_netifaces"
ignore_missing_imports=true

[[tool.mypy.overrides]]
module="netifaces.netifaces"
ignore_missing_imports=true

[project.optional-dependencies]
dev = [
    "mypy >= 0.981",
    "black >= 22.10.0",
    "isort >= 5.10.1"
]



