[build-system]
requires = ["maturin>=1.4.0"]
build-backend = "maturin"

[project]
name = "netifaces2"
description = "Portable network interface information"
version = "0.0.21"
requires-python = ">=3.7"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ['typing-extensions']
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Networking"
]
authors = [
    { name = "Samuel Yvon", email = "samuelyvon9@gmail.com" }
]
maintainers = [
    { name = "Samuel Yvon", email = "samuelyvon9@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/SamuelYvon/netifaces-2"
Issues = "https://github.com/SamuelYvon/netifaces-2/issues"

[project.optional-dependencies]
dev = [
    "mypy >= 0.991",
    "black >= 23.1.0",
    "ruff >= 0.0.240",
    "pytest >= 7.1.1"
]

[tool.black]
target-version = ["py311", "py310", "py39", "py38", "py37"]

[tool.maturin]
python-source = "python"
module-name = "netifaces"
bindings = "pyo3"

[tool.mypy]
python_version = "3.7"
exclude = ['venv/.*/*\.py$']
strict = true

[[tool.mypy.overrides]]
module = 'netifaces.netifaces'
ignore_missing_imports = true

[tool.ruff]
src = ["netifaces"]
target-version = "py37"
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle
    "F", # pyflakes
    "W", # pycodestyle
    "RUF", # ruff
    "I", # isort
    "PT", # flake8-pytest-style
]

[tool.coverage.report]
omit = ["_test.py"]
